<resources>
    <string name="app_name">Sistema Base de Datos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuración</string>

    <string name="aceptar">Aceptar</string>
    <string name="entendido">Entendido</string>
    <string name="volver">Volver</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">Salir</string>


    <!-- MENU DEL NAVEGATION DRAWER -->
    <string name="tituloEjemplos">Ejemplos</string>
    <string name="Ejemplo1">Tableaux</string>
    <string name="Ejemplo2">Perdida de Información</string>
    <string name="Ejemplo3">Claves Candidata</string>
    <string name="Ejemplo4">Fmin (Teoria)</string>
    <string name="Ejemplo5">C.C. y Fmin </string>
    <string name="titulo_draw_nav">Sistema de Base de Datos</string>
    <string name="ayuda">Ayuda</string>

    <!--_________________________________________________________________________-->
    <!--|                                                                       |-->
    <!--|                          ATRIBUTOS                                    |-->
    <!--|_______________________________________________________________________|-->
    <string name="tituloAtributo">Atributo</string>
    <string name="tituloAgregarAtributo">Lista de Atributos Agregados</string>
    <string name="listaAtributosVacia">No hay Atributos Ingresados :( </string>

    <string name="errorAtributoInvalidoRepetido">El elemento %1$s se encuentra repetido o es invalido</string>
    <string name="errorAtributosInvalidosRepetidos">Estos elementos %1$s se encuentran repetidos o son invalido</string>
    <string name="errorAtributoRepetido">El elemento %1$s se encuentra repetido </string>
    <string name="errorAtributosRepetidos">Estos elementos %1$s se encuentran repetidos</string>

    <string name="errorAtributoInvalido">El atributo ingresado es invalido (no se permite ",")</string>
    <string name="tituloFragmentAgregarAtributo">Agregar Atributo</string>
    <string name="subTituloFragmentAgregarAtributo">Ingrese Atributo</string>
    <string name="preTextoMuchosFragmentAgregarAtributo">Estos elementos </string>
    <string name="postTextoMuchosFragmentAgregarAtributo"> se encuentra repetidos.</string>
    <string name="preTextoUnicoFragmentAgregarAtributo">Este elemento </string>
    <string name="postTextoUnicoFragmentAgregarAtributo">se encuentra repetido.</string>

    <string name="errorAgregarAtributoYaIngresado">El Atributo ingresado ya se encuentra en la lista</string>
    <string name="errorAgregarAtributoVacio">Por favor ingrese un Atributo </string>

    <string name="informarAtributosEliminar">Se van a eliminar %1$d atributos</string>
    <string name="informarAtributoEliminar">Se va a eliminar 1 atributo</string>
    <string name="tituloFragmentModificarAtributo">Modificar Atributo</string>
    <string name="subtituloFragmentModificarAtributo">Modificar Atributo</string>
    <string name="indicacionFragmentModificarAtributo">El anterior atributo era:</string>
    <string name="errorModificarAtributoYaIngresado">El Atributo ingresado ya se encuentra en la lista</string>
    <string name="errorModificarAtributoVacio">Por favor ingrese un Atributo </string>

    <string name="ErrorNoHayAtributos">No se puede calcular porque no hay atributos</string>

    <!--BOTONES ATRIBUTOS-->
    <string name="agregarAtributo">Agregar </string>
    <string name="modificarAtributo">Modificar </string>


    <!--_________________________________________________________________________-->
    <!--|                                                                       |-->
    <!--|                       DEPENDENCIA FUNCIONAL                           |-->
    <!--|_______________________________________________________________________|-->

    <string name="listaDependencias">Lista de dependencias funcionales</string>

    <string name="tituloDeterminante">Determinante</string>
    <string name="tituloDeterminado">Determinado</string>
    <string name="tituloDependenciaFuncional">Dependencia Funcional</string>
    <string name="tituloAgregarDependenciaFuncional">Agregar Dependencia Funcional</string>
    <string name="tituloModificarDependenciaFuncional">Modificar Dependencia Funcional</string>

    <string name="ErrorDependenciaFuncionalRepetida">La dependendecia funcional se encuentra repetida</string>
    <string name="ErrorDependenciaFuncionalNoHayAtributos">No hay atributos agregados</string>
    <string name="ErrorDFNoHayDeterminanteSeleccionados">No hay Determinante Seleccionado</string>
    <string name="ErrorDFNoHayDeterminadoSeleccionados">No hay Determinado Seleccionado</string>

    <!-- CLAVES CANDIDATAS -->
    <string name="tituloClaveCandidata">Clave Candidata</string>
    <string name="Seleccionada">C.C Seleccionada:</string>
    <string name="superClaves">Super Claves: </string>

    <!-- CÁLCULO DE CLAUSURAS -->
    <string name="tituloClausura">Clausura</string>
    <string name="seleccionarClausura">Seleccione atributos para el cálculo</string>
    <string name="btnCalcularClausura">Calcular Clausura</string>
    <string name="tituloCalcularClausura">Calcular Clausura</string>

    <!-- F MIN -->
    <string name="tituloFMin">F min</string>
    <string name="subTituloFMin">Pasos F min </string>
    <string name="subTituloFMinSinDependencias">Al no haber dependencias F min es </string>
    <string name="CalculoFMPrimerPaso">Todas las dependencias funcionales deben ser simples ( X → A) </string>
    <string name="CalculoFMSegundoPaso">No debe haber atributos redundantes del lado del determinado</string>
    <string name="CalculoFMTercerPaso">No debe haber dependecias funcionales redundantes</string>


    <!-- TABLEAUX -->
    <string name="tituloTableaux">Tableaux</string>
    <string name="titutloListaTableaux">Lista de Esquemas Agregados</string>
    <string name="pasosTableaux">Pasos</string>
    <string name="tituloEsquemas">Listado de Esquemas</string>
    <string name="tituloAgregarEsquema">Esquemas</string>
    <string name="btnCalculoTableux">Calcular Tableaux</string>
    <string name="ErrorTableauxEsquemasVacios">No hay esquemas ingresados</string>
    <string name="ErrorEsquemasVacio">No Hay elemento seleccionado</string>
    <string name="seleccionarEsquema">Seleccione elemento del esquema</string>
    <string name="ErrorEsquemasRepetido">El esquema ingresado se encuentra repetido</string>
    <string name="ErrorTableauxNoHayAtributos">No hay atributos ingresados para calcular tableaux</string>
    <string name="ErrorTableauxNoHayDF">No hay dependencias funcionales para calcular tableaux</string>
    <string name="tituloTableauxResultado">Resultado</string>
    <string name="tituloTableauxPasos">Pasos</string>
    <string name="subtituloTableauxCalculo">El resultado es :</string>
    <string name="subTituloTableuxTienePerdida">Tiene Perdida de información</string>
    <string name="subTituloTableuxNoTienePerdida"><b>No</b> tiene Perdida de información</string>
    <string name="subTituloPasosTableauxInicial"><b>Esquema Inicial</b></string>
    <string name="subTituloPasosTableaux"><b>Dependencia Funcional: </b> %1$s </string>
    <string name="ErrorNoHayMasPasos">No hay mas pasos para continuar</string>

    <!-- FORMA NORMAL -->
    <string name="tituloFormaNormal">Forma Normal</string>
    <string name="JustificacionFormaNormalBoyceCodd">El determinante <b>( %1$s )</b>  es igual a la c.c <b>( %2$s )</b> </string>
    <string name="JustificacionFormaNormalBoyceCoddSinDependencias">Al no tener dependencias es igual a la c.c <b>( %1$s )</b> </string>
    <string name="JustificacionTerceraFormaNormal">El determinado <b>( %1$s )</b>  forma parte de la c.c <b>( %2$s )</b>  ></string>
    <string name="JustificacionSegundaFormaNormal">El determinante <b>( %1$s )</b>  NO forma parte de la c.c <b>( %2$s )</b> </string>
    <string name="JustificacionPrimeraFormaNormal">Como no es FNBC , Tercera Forma Normal ni Segunda Forma , Esta en primera Forma Normal</string>
    <string name="JustificacionPorQueNoFormaNormalBoyceCodd">El determinante <b>( %1$s ) NO </b>  es igual a la c.c <b>( %2$s )</b> </string>
    <string name="JustificacionPorQueNoTerceraFormaNormal">El determinado <b>( %1$s ) NO </b> forma parte de la c.c <b>( %2$s )</b> </string>
    <string name="JustificacionPorQueNoSegundaFormaNormal">El determinante <b>( %1$s )</b>  forma parte de la c.c <b>( %2$s )</b> </string>
    <string name="tituloJustificacionFormaNormalBoyceCodd">Es Forma Normal de Boyce Codd</string>
    <string name="tituloJustificacionTerceraFormaNormal">Es Tercera Forma Normal</string>
    <string name="tituloJustificacionSegundaFormaNormal">Es Segunda Forma Normal</string>
    <string name="tituloJustificacionPrimeraFormaNormal">Es Primera Forma Normal</string>
    <string name="tituloJustificacionNoFormaNormalBoyceCodd">No es Forma Normal de Boyce Codd</string>
    <string name="tituloJustificacionNoTerceraFormaNormal">No es Tercera Forma Normal</string>
    <string name="tituloJustificacionNoSegundaFormaNormal">No es Segunda Forma Normal</string>

    <!--CALCULO EFICIENTE -->
    <string name="tituloCalculoEficiente">Cálculo Eficiente</string>
    <string name="subTituloCalculoEficiente">Pasos para descomposición en 3FN</string>
    <string name="EsquemasEnFNBC">Los esquemas ingresados ya se encuentran en <b>FNBC</b> </string>
    <string name="EsquemasEn3FN">Los esquemas ingresados ya se encuentran en <b>3FN</b> </string>
    <string name="CalculoEficientePrimerPaso"> Encontrar un Fmin</string>
    <string name="CalculoEficienteSegundoPaso"> Crear un sub­esquema ​para cada dependencia funcional asociado a R</string>
    <string name="CalculoEficienteTercerPaso">Verificar ​que algún sub­esquema contenga alguna Clave Candidata ​,\n
                                              En caso de que ningún sub­esquema​ cumpla ​con lo anterior,entonces crear
                                              un sub esquema ​que contenga clave candidata</string>
    <string name="CalculoEficienteCuartoPaso">Verificar si se puede encontrar un diseño eficiente con menos esquemas</string>

    <!-- CALCULO SIN PERDIDA DE INFORMACION-->
    <string name="tituloCalculoSinPerdida">Cálculo Sin Perdida de Información</string>
    <string name="subTituloCalculoSinPerdida">Pasos para descomposición en ​FNBC​ :</string>

    <string name="CalculoSinPerdidaPrimerPaso"> Encontrar un Fmin</string>
    <string name="CalculoSinPerdidaSegundoPaso">​Para un esquema del tipo R(A,B,C,&#8230;,N) con un grupo de dependencias funcionales.\n
                                                Si alguna Dependencia Funcional X→A viola la FNBC ,Entonces se Proyecta Esquema en: \nEsquema1 = X U A y \nEsquema2 = X ­ A.\n
                                                F1 y F2 contiene las dependencias funcionales de F+ cuyos atributos están en Esquema1 y Esquema2 correspondientemente.</string>

    <string name="CalculoSinPerdidaTercerPaso">Continuar analizando R1 y R2 Hasta que todos los esquemas terminales del árbol estén en FNBC</string>


    <!-- TITULOS DE LAS ACTIVITY'S -->
    <string name="title_activity_agregar_dependencia_funcional">Agregar Dep. Funcional</string>
    <string name="title_activity_modificar_dependecia_funcional">Modificar Dep. Funcional</string>
    <string name="title_activity_calcular_clausura">Calcular Clausura</string>
    <string name="title_activity_agregar_esquemas">Agregar Esquemas</string>
    <string name="title_activity_calculo_tableaux">Cálculo Tableaux</string>
    <string name="title_activity_modificar_esquema">Modificar Esquema</string>
</resources>
