<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:padding="8dp"
        tools:ignore="UselessParent">
        <!-- TITULO -->
        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimaryDark"
                />

            <TextView
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloFragmentAgregarAtributo"
                android:textStyle="bold"
                android:textSize="24sp" />

        </LinearLayout-->

        <!-- INPUT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
          >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="text"
                    android:hint="@string/subTituloFragmentAgregarAtributo"
                    android:tag="@string/subTituloFragmentAgregarAtributo"
                    android:ems="10"
                    android:id="@+id/etAtributoPorAgregar"
                    style="@style/Widget.AppCompat.EditText" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <!-- BOTONES ACEPTAR Y CANCELAR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btnAgregarAtributosAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agregarAtributo"
                android:textColor="@color/colorAccent"
                style="@style/Widget.AppCompat.Button.Borderless" />
            <Button
                android:id="@+id/btnAgregarAtributosCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:textColor="@color/colorAccent"
                style="@style/Widget.AppCompat.Button.Borderless" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>
